NetBSD Problem Report #33965

From dholland@eecs.harvard.edu  Mon Jul 10 15:42:52 2006
Return-Path: <dholland@eecs.harvard.edu>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 2558763B896
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 10 Jul 2006 15:42:52 +0000 (UTC)
Message-Id: <20060710154200.76F79FABA@tanaqui.eecs.harvard.edu>
Date: Mon, 10 Jul 2006 11:42:00 -0400 (EDT)
From: dholland@eecs.harvard.edu
Reply-To: dholland@eecs.harvard.edu
To: gnats-bugs@NetBSD.org
Subject: gcc4 build failure in aic7xxx_osm.c
X-Send-Pr-Version: 3.95

>Number:         33965
>Category:       kern
>Synopsis:       gcc4 build failure in aic7xxx_osm.c
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jul 10 15:45:00 +0000 2006
>Closed-Date:    Sat Sep 12 21:13:20 +0000 2009
>Last-Modified:  Sat Sep 12 21:13:20 +0000 2009
>Originator:     David A. Holland <dholland@eecs.harvard.edu>
>Release:        NetBSD 3.99.21 (-20060710)
>Organization:
   Harvard EECS
>Environment:


System: NetBSD weatherwax 3.99.21 NetBSD 3.99.21 (WEATHERWAX) #0: Fri Jul  7 13:37:33 EDT 2006  dholland@weatherwax:/usr/src/sys/arch/i386/compile/WEATHERWAX i386
Architecture: i386
Machine: i386
>Description:
	gcc4 issues some signedness warnings when compiling aic7xxx_osm.c.
	As the kernel builds with -Werror, this fails it, and as gcc4 is
	now the default, it fails by default.

>How-To-Repeat:
	Build a kernel with the aic7xxx driver using gcc4.

>Fix:

I haven't booted the kernel with this patch yet (it's still compiling)
but I have checked the source for any possible unwanted consequences of
the signedness change, and there aren't any.

Index: sys/dev/ic/aic7xxx_osm.c
===================================================================
RCS file: /cvsroot/src/sys/dev/ic/aic7xxx_osm.c,v
retrieving revision 1.22
diff -u -r1.22 aic7xxx_osm.c
--- sys/dev/ic/aic7xxx_osm.c	10 Apr 2006 22:35:28 -0000	1.22
+++ sys/dev/ic/aic7xxx_osm.c	10 Jul 2006 15:39:09 -0000
@@ -468,7 +468,7 @@
 	struct	ahc_tmode_tstate *tstate;

 	u_int	mask;
-	long	s;
+	u_long	s;

 	scb = (struct scb *)arg;
 	xs = scb->xs;
@@ -746,7 +746,7 @@
 {
 	struct	scb *scb;
 	struct	ahc_softc *ahc;
-	long	s;
+	u_long	s;
 	int	found;
 	u_int	last_phase;
 	int	target;

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->feedback
State-Changed-By: bouyer@netbsd.org
State-Changed-When: Sun, 23 Jul 2006 11:16:54 +0000
State-Changed-Why:
I just ran a current build.sh release for i386 (so including GENERIC kernel
which has this driver) and it completed. Is it still a problem for you ?


From: dholland@eecs.harvard.edu (David Holland)
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, netbsd-bugs@netbsd.org,
	gnats-admin@netbsd.org, bouyer@netbsd.org, dholland@eecs.harvard.edu
Subject: Re: kern/33965 (gcc4 build failure in aic7xxx_osm.c)
Date: Mon, 24 Jul 2006 18:51:40 -0400 (EDT)

  > Synopsis: gcc4 build failure in aic7xxx_osm.c
  > 
  > State-Changed-From-To: open->feedback
  > State-Changed-By: bouyer@netbsd.org
  > State-Changed-When: Sun, 23 Jul 2006 11:16:54 +0000
  > State-Changed-Why:
  > I just ran a current build.sh release for i386 (so including GENERIC kernel
  > which has this driver) and it completed. Is it still a problem for you ?

 It was operator error (i.e., my fault) that caused it to come up, but
 the patch is still a valid fix for building with -Wpointer-sign. See
 http://mail-index.netbsd.org/current-users/2006/07/10/0013.html.

 (I tried to send a copy of that to gnats, but evidently failed.)

 -- 
    - David A. Holland / dholland@eecs.harvard.edu

State-Changed-From-To: feedback->closed
State-Changed-By: elad@netbsd.org
State-Changed-When: Fri, 06 Oct 2006 22:30:42 +0000
State-Changed-Why:
user error...


State-Changed-From-To: closed->open
State-Changed-By: apb@netbsd.org
State-Changed-When: Sat, 07 Oct 2006 13:54:02 +0000
State-Changed-Why:
Submitter says patch is still valid.
.


From: Izumi Tsutsui <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/33965 CVS commit: src/sys/dev/ic
Date: Sat, 12 Sep 2009 19:16:35 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Sat Sep 12 19:16:35 UTC 2009

 Modified Files:
 	src/sys/dev/ic: aic7xxx_osm.c

 Log Message:
 Fix warnings by -Wpointer-sign, which is disabled by default. PR kern/33965


 To generate a diff of this commit:
 cvs rdiff -u -r1.33 -r1.34 src/sys/dev/ic/aic7xxx_osm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sun, 13 Sep 2009 06:13:20 +0900
State-Changed-Why:
fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.