Fix warnings by -Wpointer-sign, which is disabled by default. PR kern/33965